--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "type": "module",
   "description": "",
   "main": "bot.js",
+   "engines": {
+    "node": "20.x",
+    "npm": "9.x"
+  },
   "scripts": {
     "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,14 +16,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@distube/ytdl-core": "^4.16.12",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@whiskeysockets/baileys": "^7.0.0-rc.6",
+    "canvas": "^3.2.0",
     "dotenv": "^17.2.3",
+    "fluent-ffmpeg": "^2.1.3",
     "fs-extra": "^11.3.2",
     "openai": "^6.7.0",
     "pino": "^10.1.0",
     "qrcode-terminal": "^0.12.0",
+    "word-list": "^4.1.0",
     "yt-search": "^2.13.1",
     "ytdl-core": "^4.11.5",
     "ytpl": "^2.3.0"
+    
   }
 }
